--- a/FindMP/Content/Site.css
+++ b/FindMP/Content/Site.css
@@ -1,24 +1,9 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
+﻿@import "https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Roboto+Condensed:400,700&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext";
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+body{font-family:'PT Serif', serif}h1,h2,h3,h4,h5,h6{font-family:'Roboto Condensed', sans-serif}.entry-title{font-weight:400}.header-wrapper{font-family:'Roboto Condensed', sans-serif;font-weight:400;background:#f73;background:#ff5400;background:-moz-linear-gradient(top,#ff5400 0%,#ff7632 100%);background:-webkit-linear-gradient(top,#ff5400 0%,#ff7632 100%);background:linear-gradient(to bottom,#ff5400 0%,#ff7632 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5400',endColorstr='#ff7632',GradientType=0)}.header-wrapper .main-nav a{color:#fff}.header-wrapper .menu-toggle{color:#fff}.header-wrapper .menu-toggle:hover,.header-wrapper .menu-toggle:focus,.header-wrapper .menu-toggle:active{color:#fff}.main-nav .menu-item a{padding:.5em;margin:0 1em 0 0}.main-nav .menu-item.current-menu-item a{border-bottom:.25em solid #fff}.menu-item[class*="lang-"]{font-family:'Oswald', sans-serif}@media only screen and (min-width: 769px){.menu-item[class*="lang-"] a{font-size:small}}.menu-item[class*="lang-"] a:before{content:" ";display:inline-block;margin:0 .5em 0 0;border:1px solid #999;width:20px;height:15px;background-repeat:no-repeat;background-position:50% 50%;background-size:contain;vertical-align:middle}.menu-item[class*="lang-"].lang-en_gb a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/gb.svg)}.menu-item[class*="lang-"].lang-pl_pl a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/pl.svg)}.menu-item[class*="lang-"].lang-es_es a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/es.svg)}.menu-item[class*="lang-"].lang-de_de a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/de.svg)}.menu-item[class*="lang-"].lang-sl_si a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/sl.svg)}.menu-item[class*="lang-"].lang-bg_bg a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/bg.svg)}.menu-item[class*="lang-"].lang-ro_ro a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/ro.svg)}.menu-item[class*="lang-"].lang-el-po a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/gr.svg)}.menu-item[class*="lang-"].lang-pt_pt a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/pt.svg)}.menu-item[class*="lang-"].lang-hu_hu a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/hu.svg)}.menu-item[class*="lang-"].lang-nl_nl a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/nl.svg)}.menu-item[class*="lang-"].lang-bal a:before{background-image:url(https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/1.4.0/flags/4x3/es.svg)}.post blockquote p{color:#000;font-size:1.2em;font-style:italic}.post ul.pages-by-lang{list-style:none;margin:0;padding:0}.post ul.pages-by-lang li{list-style:none;margin:0;padding:10px 0}.post ul.pages-by-lang li h4{margin:0;padding:0}.post ul.pages-by-lang li p{margin:0;padding:0}ul.language-versions{list-style:none;margin:3em 0;padding:0}ul.language-versions:after{content:"";display:table;clear:both}ul.language-versions li{list-style:none;margin:0;padding:1em 0}ul.language-versions li a:before{content:"";display:block;float:left;margin:0 1em 1em 0;width:5em;height:1.82292em;background-color:#aaa;background-repeat:no-repeat;background-position:center;background-size:100% 100%;vertical-align:middle}ul.language-versions li a[href*="/en_gb/"]:before{background-image:url(/wp-content/uploads/2016/07/Flag-hero-gb.jpg?w=1920)}ul.language-versions li a[href*="/de_de/"]:before{background-image:url(/wp-content/uploads/2016/07/Flag-hero-de.jpg?w=1920)}ul.language-versions li a[href*="/pl_pl/"]:before{background-image:url(/wp-content/uploads/2016/07/Flag-hero-pl.jpg?w=1920)}ul.language-versions li a[href*="/ro_ro/"]:before{background-image:url(/wp-content/uploads/2016/07/Flag-hero-ro.jpg?w=1920)}ul.language-versions li a[href*="/bg_bg/"]:before{background-image:url(/wp-content/uploads/2016/07/Flag-hero-bg.jpg?w=1920)}ul.language-versions li a[href*="/es_es/"]:before{background-image:url(/wp-content/uploads/2016/07/Flag-hero-es.jpg?w=1920)}ul.language-versions li a[href*="/hu_hu/"]:before{background-image:url(/wp-content/uploads/2016/07/Flag-hero-hu.jpg?w=1920)}ul.language-versions li a[href*="/nl_nl/"]:before{background-image:url(/wp-content/uploads/2016/07/Flag-hero-nl.jpg?w=1920)}
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
+.post-content a {
+			color: #e74431;
+		}
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
+.post-content p {font-weight: normal}
