--- a/FindMP/Views/Home/Confirmation.cshtml
+++ b/FindMP/Views/Home/Confirmation.cshtml
@@ -6,4 +6,4 @@
 
 <h2>Confirmation</h2>
 
-Your e-mail has been send. You should receive a copy in a minute or two
+Your email has been sent. You should receive a copy shortly.
