--- a/FindMP/Views/Home/Index.cshtml
+++ b/FindMP/Views/Home/Index.cshtml
@@ -5,16 +5,21 @@
 
 <div class="title-wrap">
 
-        <h2 class="entry-title">Send a letter to your MP</h2>
+        <h2 class="entry-title">Write to your MP</h2>
 
 </div>
 <div class="post-content">
-    <p>On this page you will be able to send a message to your MP, letting him know how you feel now after unfortunate referendum</p>
+    <p>
+       You have a right to know what your local representative thinks of your future in Britain.
+    </p>
+    <p>
+        Use this page to write to your MP, asking how they will ensure that your rights are protected as Britain begins the formal process of leaving the EU.
+    </p>
     <p><a href="http://immigrants.help" class="btn btn-primary btn-lg">Go to our main site &raquo;</a></p>
     
     <div>
         <h4>
-            <label for="yourname">Your name</label>
+            <label for="yourname">What's your name?</label>
         </h4>
         <p>
             <input type="text" id="yourname" />
@@ -22,7 +27,7 @@
     </div>
     <div>
         <h4>
-            <label for="postcode">Postcode</label>
+            <label for="postcode">What's your postcode?</label>
         </h4>
         <p>
             <input type="text" id="postcode" />
@@ -38,7 +43,7 @@
 
     <div>
         <h4>
-            <label for="country">Your country</label>
+            <label for="country">Where are you from?</label>
         </h4>
         <p>
             <select id="country">
@@ -75,27 +80,27 @@
     </div>
     <div>
         <h4>
-            <label for="howlong">How many years in UK</label>
+            <label for="howlong">How many years have you lived in the UK?</label>
         </h4>
         <p>
-            <input type="number" id="howlong" />
+            <input type="number" id="howlong" /> 
         </p>
     </div>
     <div>
         <h4>
-            <label for="email">Your eMail</label>
+            <label for="email">What's your e-mail?</label>
         </h4>
         <p>
             <input type="email" id="email" />
         </p>
     </div>
     <div>
-        <label><input type="checkbox" id="cbox1" value="first_checkbox">I have read and accepted <a href="/Home/TC" target="blank">Terms & Conditions</a></label>
+        <label><input type="checkbox" id="cbox1" value="first_checkbox">I have read and accept <a href="/Home/TC" target="blank">the Terms & Conditions</a></label>
     </div>
     <div style="clear: both;">
-        <button id="prepareletter" style="display:none">Prepare letter</button>
+        <button id="prepareletter" style="display:none">Generate e-mail</button>
         <div id="letter" style="display: none"></div>
-        <button id="sendletter" style="display:none">Send letter to {?}</button>
+        <button id="sendletter" style="display:none">Send</button>
     </div>
 </div>
 
